--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,6 @@ setuptools==65.6.3 ; python_version >= '3.7'
 werkzeug==2.2.2 ; python_version >= '3.7'
 zipp==3.11.0 ; python_version >= '3.7'
 pandas==2.1.3
+python-docx==1.0.1
+docx==0.2.4 
+Flask-Cors==4.0.0 
